--- a/dgclock.css
+++ b/dgclock.css
@@ -26,27 +26,28 @@
 
 .container::before{
     content: '';
-    width: 500px;
-    height: 65px;
+    width: 150px;
+    height: 100px;
     /* background: rgb(168, 0, 0); */
     position: absolute;
     top: -20px;
+    left: -20px;
     z-index: -1;
-    border-radius: 10px 10px 0 0;
-    animation: box1 3000ms ease-in-out infinite running;
+    border-radius: 20px;
+    animation: box1 3000ms ease-in-out infinite alternate;
 }
 
 .container::after{
     content: '';
-    width: 500px;
-    height: 65px;
+    width: 150px;
+    height: 150px;
     /* background: rgb(10, 12, 97); */
     position: absolute;
-    bottom: -20px;
-    /* right: -30px; */
+    bottom: -40px;
+    right: -30px;
     z-index: -1;
-    border-radius: 0 0 10px 10px ;
-    animation: box2 3000ms ease-in-out infinite running;
+    border-radius: 100% ;
+    animation: box2 3000ms ease-in-out infinite alternate;
 }
 @keyframes box1{
     0%{
